# Yuki

./: .gitignore  CLAUDE.md  LICENSE  PLAN_v2.2.0.md  README.md  SECURITY.md  VERSION  build.bat  config.py  dev.bat  installer.nsi  main.py  package-lock.json  release.bat  requirements.txt  version.json  version_bump.bat  version_info.txt
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: config.py  database.py  logger.py  main.py  models.py  schemas.py
backend/app/middleware/: audit.py  rate_limit.py
backend/app/routers/: __init__.py  converter.py  download.py  history.py  player.py  settings_router.py  system.py  tagger.py  updater.py
backend/app/services/: auto_updater.py  autostart.py  converter.py  detector.py  downloader.py  player.py  player_engine.py  spotify.py  tagger.py
backend/app/utils/: ports.py
core/: auto_updater.py  downloader.py  git_manager.py  history.py  logger.py  player.py  tagger.py  updater.py  version_manager.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  i18n.ts  main.tsx  store.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  tr.json  translator.py
scripts/: build_backend.py  bump_version.py  release.py
ui/: converter_tab.py  downloader_tab.py  editor_tab.py  history_tab.py  log_viewer.py  main_window.py  player_bar.py  queue_panel.py  settings_window.py  sidebar.py
ui/widgets/: link_input.py  preview_card.py  progress_item.py  tag_editor_fields.py
(+32 files in other folders)
